--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body {
 }
 
 .sidebar {
-  width: 25%;
+  width: 35%;
 }
 
 #search {
@@ -66,8 +66,11 @@ body {
 
 .listItem {
   list-style:none;
-  font-size: 1rem;
+  font-size: .8rem;
   padding: .8rem;
   border: solid 1px #777;
   cursor: pointer;
+  background-color: #ccc;
+  display: flex;
+  align-items: center;
 }
