--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,11 @@
   width: 75%;
 }
 
+/* Needed to render map properly */
+.col-md-9, .col-sm-9, .full-height {
+  height: 100vh;
+}
+
 html, body {
   height: 100%;
   margin: 0;
