--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,19 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-size: 11px;
+  font-family: 'Raleway', sans-serif;
+}
+
 .App {
-  /* text-align: center; */
   height: 100vh;
   width: 100vw;
-  /* display: flex; */
-  /* flex-flow: row nowrap; */
+  /* fix for Bootstrap's CSS getting specitivty over my CSS until sorted */
+  font-family: 'Raleway', sans-serif;
 }
 
 .App-logo {
@@ -45,16 +55,6 @@
   height: 100vh;
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-size: 11px;
-}
-
 .sidebar {
   /* width: 35%; */
 }
@@ -65,15 +65,20 @@ body {
   font-size: 1.2rem;
 }
 
+#brand-text {
+  font-size: 2.5rem;
+  font-family: 'Lobster', cursive;
+}
+
 .venueList {
-  padding:1.2rem;
+  padding:1rem;
   text-align: left;
 }
 
 .listItem {
   list-style:none;
   font-size: .8rem;
-  padding: .8rem;
+  padding: .2rem;
   border: solid 1px #777;
   cursor: pointer;
   background-color: #ccc;
@@ -94,12 +99,4 @@ li img {
 
 .footer img {
   margin: 0 15px 0 15px;
-}
-
-.hidden {
-  display: none;
-}
-
-.visible {
-  display: block;
 }
