--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,7 +10,7 @@ body {
 }
 
 .App {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
   /* fix for Bootstrap's CSS getting specitivty over my CSS until sorted */
   font-family: 'Raleway', sans-serif;
