--- a/src/css/App.css
+++ b/src/css/App.css
@@ -45,14 +45,10 @@ body {
   }
 }
 
-#map {
-  height: 100vh;
-  width: 75%;
-}
 
 /* Needed to render map properly */
-.col-md-9, .col-sm-9, .full-height {
-  height: 100vh;
+.full-height {
+  height: 90vh;
 }
 
 nav img {
@@ -71,7 +67,7 @@ nav img {
   max-width: 250px;
   float: left;
   margin: 0;
-  height: 100vh;
+  /* height: 100vh; */
   overflow: scroll;
 }
 
